Record & replay implementation